src/test/ui/closures/closure-no-fn-3.stderr
error[E0605]: non-primitive cast: `[closure@$DIR/closure-no-fn-3.rs:6:27: 6:37 b:_]` as `fn() -> u8`
  --> $DIR/closure-no-fn-3.rs:6:27
   |
LL |     let baz: fn() -> u8 = (|| { b }) as fn() -> u8;
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^ invalid cast

error: aborting due to previous error

For more information about this error, try `rustc --explain E0605`.
